2010-12-29  Zhenyao Mo  <zmo@google.com>

Reviewed by Kenneth Russell.

        vertexAttribPointer should raise INVALID_OPERATION if stride/offset is not multiple of the type size
        https://bugs.webkit.org/show_bug.cgi?id=51725

        * html/canvas/WebGLRenderingContext.cpp:
        (WebCore::WebGLRenderingContext::vertexAttribPointer):
2010-12-29  Zhenyao Mo  <zmo@google.com>

        Reviewed by Kenneth Russell.

        vertexAttribPointer should raise INVALID_OPERATION if stride/offset is not multiple of the type size
        https://bugs.webkit.org/show_bug.cgi?id=51725

        * fast/canvas/webgl/gl-vertexattribpointer-expected.txt:
        * fast/canvas/webgl/gl-vertexattribpointer.html: Sync with khronos.


Canonical link: https://commits.webkit.org/65516@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@75195 268f45cc-cd09-0410-ab3c-d52691b4dbfc